deploy/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: test
  labels:
    app: load
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load
  template:
    metadata:
      labels:
        app: load
    spec:
      containers:
      - name: load-generator
        image: ghcr.io/infracloudio/load-generator:latest
        imagePullPolicy: IfNotPresent
